--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/js/(.*).js",
+      "source": "/js/(.*)",
       "headers": [
         {
           "key": "Content-Type",
